Add/Sync Course 1 assignments: SQL Querying and Map Reduce jobs

--- a/Course_1_Assignments/assignment2/sqlite3_queries_tutorial.ipynb
+++ b/Course_1_Assignments/assignment2/sqlite3_queries_tutorial.ipynb
@@ -619,6 +619,22 @@
    "source": [
     "Disclaimer: This probably only works well for valid SQL queries. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Author: Fernando Hernandez\n",
+    "\n",
+    "First Draft"
+   ]
   }
  ],
  "metadata": {
